134-dev-lab-equipment-digital-twin: [AgilentPostProcAgent -> HPLCPostProAgent] renamed AgilentPostProcAgent to HPLCPostProAgent given the generality of the agent functions.

--- a/Agents/HPLCPostProAgent/Dockerfile
+++ b/Agents/HPLCPostProAgent/Dockerfile
@@ -19,7 +19,7 @@ EXPOSE 5000
 
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
-RUN echo ABCDEggg
+RUN echo ABCDEFG
 # Install the required Python libraries
 COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
@@ -35,7 +35,7 @@ RUN python -m pip install -r requirements.txt
 
 # Set the default working directory, then copy the Python source code into it
 WORKDIR /app
-ADD agilentpostprocagent /app/agilentpostprocagent
+ADD hplcpostproagent /app/hplcpostproagent
 
 # Switch to a non-root user before running the server, for security reasons
 # (See https://code.visualstudio.com/docs/containers/python-user-rights)
@@ -49,4 +49,4 @@ RUN chmod -R 755 /home/appuser
 # Start the gunicorn server on port 5000, using a Flask object called 'app' imported from the 'python_agent' module
 # Note that port 5000 is *inside the container*; this can be mapped to a port on the host when running the container on the command line or in docker-compose.yml
 USER appuser
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "agilentpostprocagent:create_app()"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "hplcpostproagent:create_app()"]
