--- a/Agents/HeatEmissionAgent/pom.xml
+++ b/Agents/HeatEmissionAgent/pom.xml
@@ -81,7 +81,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -104,7 +104,7 @@
 	        <artifactId>xml-apis</artifactId>
 	        <version>1.4.01</version>
 		</dependency>
-	  <dependency>
+     <dependency>
 		  <groupId>uk.ac.cam.cares.jps</groupId>
 		  <artifactId>jps-base-lib</artifactId>
 		  <version>1.6.0</version>
@@ -121,5 +121,16 @@
 		  <version>1.15.1</version>
 		  <scope>compile</scope>
 	  </dependency>
+	  <dependency>
+          <groupId>net.bytebuddy</groupId>
+          <artifactId>byte-buddy</artifactId>
+          <version>1.11.20</version>
+      </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-inline</artifactId>
+          <version>3.6.28</version>
+          <!--<scope>test</scope>-->
+      </dependency>
   </dependencies>
 </project>
