dev-stack-manager: In the VSCode lanch/tasks configuration, I've moved the Docker stack "remove service" commands from after the code has run to just before it is started. This makes it easier to view the logs and means that the stack name only needs to be specified once.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
@@ -17,8 +17,7 @@
             "hostName": "localhost",
             "port": "5006",
             "preLaunchTask": "compose-deploy-dev",
-            "projectName": "stack-clients",
-            "postDebugTask": "remove-service"
+            "projectName": "stack-clients"
         },
         {
             "type": "java",
