dev-stack-manager: Added a "scratch" volume to all containers in the stack so that they can easily share files, this should be viewed as a temporary storage space where files should be copied in, processed, and then deleted.

--- a/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       # Ensure all secret files are mapped to the /run/secrets/ directory
       # and are read only inside the container (add ":ro" on the end)
       - ./inputs/secrets:/run/secrets:ro
+      - stack_scratch:/stack_scratch
+
+volumes:
+  stack_scratch:
+    name: ${STACK_NAME}_scratch
+    labels:
+      - com.docker.stack.namespace:${STACK_NAME}
