--- a/Agents/HeatAgent/HeatEmissionAgent/pom.xml
+++ b/Agents/HeatAgent/HeatEmissionAgent/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
-  <artifactId>HeatEmissionAgent</artifactId>
+  <artifactId>heatemissionagent</artifactId>
   <version>1.0.0</version>
   <packaging>war</packaging>
 	<!-- Parent POM -->
@@ -63,17 +63,6 @@
 				</execution>
 			</executions>
 		</plugin>
-
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.3.1</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-			<!--suppress UnresolvedMavenProperty -->
-          <warName>HeatEmissionAgent</warName>
-		<outputDirectory>${tomcatPath}/webapps</outputDirectory>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
   <dependencies>
@@ -93,11 +82,6 @@
 		    <groupId>commons-io</groupId>
 		    <artifactId>commons-io</artifactId>
 		    <version>2.6</version>
-		</dependency>
-	  <dependency>
-			<groupId>com.cmclinnovations.mods</groupId>
-			<artifactId>MoDS_API</artifactId>
-			<version>0.5.0</version>
 		</dependency>
 		<dependency>
 	        <groupId>xml-apis</groupId>
