--- a/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
@@ -2,14 +2,47 @@ version: '3.8'
 services:
   stack-client:
     image: docker.cmclinnovations.com/stack-client:1.0-SNAPSHOT
+    configs:
+      - postgis
+      - geoserver
+    secrets:
+      - postgis_password
+      - geoserver_password
+    deploy:
+      mode: replicated
+      replicas: 1
+      restart_policy:
+        condition: none
+    environment:
+      - "STACK_NAME=${STACK_NAME}"
+    networks:
+      - stack
     volumes:
       - ./inputs/data:/inputs/data
       - ./inputs/config:/inputs/config
-      # Add secret files here as Docker compose doesn't handle "secrets" well
-      # Ensure all secret files are mapped to the /run/secrets/ directory
-      # and are read only inside the container (add ":ro" on the end)
-      - ./inputs/secrets:/run/secrets:ro
       - stack_scratch:/stack_scratch
+
+configs:
+  postgis:
+    name: ${STACK_NAME}_postgis
+    external: true
+  geoserver:
+    name: ${STACK_NAME}_geoserver
+    external: true
+
+networks:
+  stack:
+    name: ${STACK_NAME}
+    driver: overlay
+    external: true
+
+secrets:
+  postgis_password:
+    name: ${STACK_NAME}_postgis_password
+    external: true
+  geoserver_password:
+    name: ${STACK_NAME}_geoserver_password
+    external: true
 
 volumes:
   stack_scratch:
