--- a/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.8'
 services:
   stack-manager:
     image: docker.cmclinnovations.com/stack-manager:1.0-SNAPSHOT
+    deploy:
+      mode: replicated
+      replicas: 1
+      restart_policy:
+        condition: none
+    environment:
+      - "STACK_NAME=${STACK_NAME}"
     volumes:
       - ./inputs/data:/inputs/data
       - ./inputs/config:/inputs/config
@@ -10,9 +17,17 @@ services:
       # and are read only inside the container (add ":ro" on the end)
       - ./inputs/secrets:/run/secrets:ro
       - scratch:/stack_scratch
+    networks:
+      - stack
 
 volumes:
   scratch:
     name: ${STACK_NAME}_scratch
     labels:
       - com.docker.stack.namespace:${STACK_NAME}
+
+networks:
+  stack:
+    name: ${STACK_NAME}
+    driver: overlay
+    attachable: true
