dev-stack-manager: Configured the "remove-service" VSCode tasks to never show on the terminal as they get run in parallel to the other tasks and hide the main task terminal.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
@@ -60,7 +60,7 @@
             "label": "remove-service",
             "command": "docker service rm ${input:stackName}_stack-client ; exit 0",
             "presentation": {
-                "reveal": "always"
+                "reveal": "never"
             }
         }
     ],
