--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -57,7 +57,7 @@
             "label": "remove-service",
             "command": "docker service rm ${input:stackName}_stack-manager ; exit 0",
             "presentation": {
-                "reveal": "always"
+                "reveal": "never"
             }
         }
     ],
