dev-stack-manager: Revert "dev-stack-manager: Modified the Dockerfiles so that changes to the stack-client-lib code can cause the stack-manager image to be rebuilt."
This reverts commit aaca1f980048f8ac31e2c58141c9397f78887db5.

--- a/Deploy/stacks/dynamic/stack-manager/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-manager/Dockerfile
@@ -1,3 +1,23 @@
+# First stage: download the Java dependencies (allows them to be cached if unchanged)
+#==================================================================================================
+FROM maven:3.8.3-adoptopenjdk-11 as retriever
+
+# Copy in Maven settings templates and credentials 
+COPY docker/credentials /root/credentials
+COPY docker/.m2 /root/.m2
+
+# Populate settings templates with credentials
+WORKDIR /root/.m2
+# (Note that | rather than / is used as the sed delimiter, since encrypted passwords can contain the former, but not the latter
+RUN sed -i "s|MASTER_PASSWORD|$(mvn --encrypt-master-password master_password)|" settings-security.xml
+RUN sed -i "s|REPO_USERNAME|$(cat ../credentials/repo_username.txt)|;s|REPO_PASSWORD|$(cat ../credentials/repo_password.txt|xargs mvn --encrypt-password)|" settings.xml
+
+# Copy in Java source and build jar
+WORKDIR /root/code
+
+COPY pom.xml ./pom.xml
+RUN mvn clean dependency:resolve
+
 #==================================================================================================
 
 # Second stage: build war file
@@ -5,7 +25,7 @@
 
 FROM maven:3.8.3-adoptopenjdk-11 as builder
 
-COPY --from=docker.cmclinnovations.com/stack-client-lib:1.0-SNAPSHOT /root/.m2 /root/.m2
+COPY --from=retriever /root/.m2 /root/.m2
 
 # Copy in Java source and build jar
 WORKDIR /root/code
