dev-stack-manager: Force VSCode to use Powershell when running a couple of the tasks in Windows.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/tasks.json
@@ -53,6 +53,13 @@
             ],
             "presentation": {
                 "reveal": "always"
+            },
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "powershell"
+                    }
+                }
             }
         },
         {
@@ -61,6 +68,13 @@
             "command": "docker service rm ${input:stackName}_stack-client ; exit 0",
             "presentation": {
                 "reveal": "never"
+            },
+            "windows": {
+                "options": {
+                    "shell": {
+                        "executable": "powershell"
+                    }
+                }
             }
         }
     ],
