dev-stack-manager: Fixed the build issues reintroduced by commit a51202a5a693717b22af638845f10a8920469e47, but without leaking credentials this time.

--- a/Deploy/stacks/dynamic/stack-clients/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-clients/Dockerfile
@@ -27,7 +27,7 @@ FROM retriever as builder
 
 COPY src ./src/
 
-RUN mvn package
+RUN mvn deploy
 
 #==================================================================================================
 
