1385-dev-create-separate-library-for-ogm: comments added for Ordnance Survey API information

--- a/core/ogm/src/main/resources/config.properties
+++ b/core/ogm/src/main/resources/config.properties
@@ -6,6 +6,9 @@ uri.route=http://localhost:48080/test
 
 uri.ckg.cityobject=/cityobject/
 
+# Ordnance Survey API information
+#os.api.key=<PUT_YOUR_KEY_HERE>
+
 # for the city information agent
 loading.status=false
 
