--- a/BIMCesiumVisualisation/package.json
+++ b/BIMCesiumVisualisation/package.json
@@ -4,7 +4,9 @@
   "description": "The recommended setup for visualising BIM in Cesium via Webpack",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js"
+    "start": "webpack serve --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js",
+    "demonstrator": "webpack serve --config webpack.prod.js --open --compress --port 3000 --no-client-overlay"
   },
   "author": "qhouyee",
   "license": "MIT",
@@ -16,6 +18,7 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   }
 }
