--- a/BIMCesiumVisualisation/package.json
+++ b/BIMCesiumVisualisation/package.json
@@ -14,7 +14,9 @@
     "cesium": "^1.95.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
