1389-dev-amend-ogm-pom-to-publish-as-a-package: add parent pom and distribution management section to ogm pom.xml for deploying ogm as a package

--- a/core/ogm/pom.xml
+++ b/core/ogm/pom.xml
@@ -35,6 +35,22 @@
         </repository>
     </repositories>
 
+    <!-- Parent POM -->
+    <parent>
+        <groupId>uk.ac.cam.cares.jps</groupId>
+        <artifactId>jps-parent-pom</artifactId>
+        <version>1.0.0</version>
+    </parent>
+
+    <!-- Repository locations to deploy to -->
+    <distributionManagement>
+        <repository>
+            <id>repo</id>
+            <name>TheWorldAvatar Maven Repository</name>
+            <url>https://maven.pkg.github.com/cambridge-cares/TheWorldAvatar/</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <testSourceDirectory>src/test/java</testSourceDirectory>
