--- a/core/ogm/pom.xml
+++ b/core/ogm/pom.xml
@@ -4,9 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <groupId>uk.ac.cam.cares.ogm</groupId>
     <artifactId>ogm</artifactId>
+    <name>ogm</name>
+
     <version>1.0.0</version>
 
     <properties>
