--- a/Agents/DerivationExample/DerivationExample/src/main/resources/credentials.properties
+++ b/Agents/DerivationExample/DerivationExample/src/main/resources/credentials.properties
@@ -1,6 +1,6 @@
 db.url = jdbc:postgresql://postgres/postgres
 db.user = postgres
-db.password = 
+db.password = postgres
 kg.url = http://blazegraph:8080/blazegraph/namespace/kb/sparql
 kg.user = bg_user
 kg.password = 
