--- a/Agents/DerivationExample/docker-compose.yml
+++ b/Agents/DerivationExample/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: "postgres"
     environment:
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
-    image: docker.cmclinnovations.com/postgres:13.3-alpine
+    image: postgres:14.4-alpine
     restart: unless-stopped
     secrets:
       - postgres_password
