--- a/Agents/DerivationExample/docker-compose.yml
+++ b/Agents/DerivationExample/docker-compose.yml
@@ -21,6 +21,10 @@ services:
       - "8889:8080"
     volumes:
       - blazegraph_data:/data
+    secrets:
+      - blazegraph_password
+    environment:
+      BLAZEGRAPH_PASSWORD_FILE: /run/secrets/blazegraph_password
 
   # if the postgres_data volume was initialised with an older version, it is required to remove it
   # docker volume rm postgres_data
@@ -40,6 +44,8 @@ services:
 secrets:
   postgres_password:
     file: credentials/postgres_password
+  blazegraph_password:
+    file: credentials/blazegraph_password
 
 volumes:
   blazegraph_data:
