--- a/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
@@ -6,25 +6,11 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch App",
-            "request": "launch",
-            "mainClass": "com.cmclinnovations.stack.App",
-        },
-        {
-            "type": "java",
-            "name": "Launch and attach Docker",
+            "name": "Debug Stack Client",
             "request": "attach",
             "hostName": "localhost",
             "port": "5006",
             "preLaunchTask": "compose-deploy-dev",
-            "projectName": "stack-clients"
-        },
-        {
-            "type": "java",
-            "name": "Attach Docker",
-            "request": "attach",
-            "hostName": "localhost",
-            "port": "5006",
             "projectName": "stack-clients"
         }
     ]
