dev-stack-manager: Added VSCode launch command that just pulls a pre-built stack-manager image.

--- a/Deploy/stacks/dynamic/stack-manager/.vscode/launch.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/launch.json
@@ -12,6 +12,15 @@
             "port": "5005",
             "preLaunchTask": "compose-deploy-dev",
             "projectName": "stack-manager"
+        },
+        {
+            "type": "java",
+            "name": "Build and Debug Stack Manager",
+            "request": "attach",
+            "hostName": "localhost",
+            "port": "5005",
+            "preLaunchTask": "compose-deploy-dev-build",
+            "projectName": "stack-manager"
         }
     ]
 }
