dev-stack-manager-howtostart: aligned default stack name with name of services to be "TEST-STACK"

--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -99,7 +99,7 @@
             "id": "stackName",
             "type": "promptString",
             "description": "Name your stack.",
-            "default": "TEST_STACK"
+            "default": "TEST-STACK"
         }
     ]
 }
