dev-stack-manager-howtostart: Updated readme according to latest port changes and tested all steps are working

--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -45,7 +45,7 @@
             "label": "compose-deploy-dev-build",
             "command": "sleep 1",
             "dependsOn": [
-                "compose-push",
+                "compose-build",
                 "compose-deploy-dev-internal"
             ],
             "dependsOrder": "sequence",
