--- a/JPS_ACCESS_AGENT/access-agent-code/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent-code/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps</groupId>
   <artifactId>access-agent</artifactId>
-  <version>1.4.0</version>
+  <version>1.4.0-SNAPSHOT-2</version>
   <packaging>war</packaging>
   <name>AccessAgent</name>
   
@@ -89,7 +89,7 @@
   	<dependency>
     	<groupId>uk.ac.cam.cares.jps</groupId>
     	<artifactId>jps-base-lib</artifactId>
-    	<version>1.12.1-DEV-ACCESSAGENT-CONFIG-VARIABLES-SNAPSHOT</version>
+    	<version>1.12.0-dev-accessagent-config-variables-SNAPSHOT-1</version>
     </dependency>
    
     <!-- Java servlet API -->
