--- a/JPS_ACCESS_AGENT/docker-build/Dockerfile
+++ b/JPS_ACCESS_AGENT/docker-build/Dockerfile
@@ -12,7 +12,7 @@ RUN sed -i "s|MASTER_PASSWORD|$(mvn --encrypt-master-password master_password)|"
 RUN sed -i "s|REPO_USERNAME|$(cat ../credentials/repo_username.txt)|;s|REPO_PASSWORD|$(cat ../credentials/repo_password.txt|xargs mvn --encrypt-password)|" settings.xml
 
 # Build
-WORKDIR /root/access-agent
+WORKDIR /root/access-agent-code
 RUN mvn package
 #==================================================================================================
 
@@ -22,7 +22,7 @@ FROM tomcat:9.0 as agent
 
 WORKDIR /app
 
-COPY --from=builder /root/access-agent/output/access-agent##1.4.0.war $CATALINA_HOME/webapps/
+COPY --from=builder /root/access-agent-code/output/access-agent##1.4.0-SNAPSHOT-2.war $CATALINA_HOME/webapps/
 
 # Start the Tomcat server
 ENTRYPOINT ["catalina.sh", "run"]
