--- a/Agents/WeatherAgent/docker-compose.yml
+++ b/Agents/WeatherAgent/docker-compose.yml
@@ -8,7 +8,6 @@ services:
       context: ./
     ports:
       - "8081:8080"
-
     volumes:
       - logs:/root/.jps
 
@@ -29,9 +28,7 @@ services:
   postgres:
     container_name: "postgres"
     environment:
-      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
-      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256"
-      POSTGRES_PASSWORD_FILE: /run/secrets/postgres_password
+      POSTGRES_PASSWORD: postgres_password
     image: postgres:14.4-alpine
     restart: unless-stopped
     secrets: # username is postgres
