--- a/Deploy/stacks/dynamic/stack-clients/pom.xml
+++ b/Deploy/stacks/dynamic/stack-clients/pom.xml
@@ -100,14 +100,14 @@
           <archive>
             <manifest>
               <!-- These properties add the copied dependencies to the classpath so the .jar can find them at runtime. -->
-              <addClasspath>true</addClasspath>
-              <classpathPrefix>.</classpathPrefix>
-              <classpathLayoutType>repository</classpathLayoutType>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>./lib/</classpathPrefix>
+                <classpathLayoutType>simple</classpathLayoutType>
+                <useUniqueVersions>false</useUniqueVersions>
               <mainClass>com.cmclinnovations.stack.App</mainClass>
-              <useUniqueVersions>false</useUniqueVersions>
             </manifest>
           </archive>
-          <outputDirectory>${project.build.directory}/lib</outputDirectory>
+          <outputDirectory>${project.build.directory}</outputDirectory>
         </configuration>
       </plugin>
       <plugin>
@@ -124,7 +124,7 @@
             <configuration>
               <includeScope>runtime</includeScope>
               <outputDirectory>${project.build.directory}/lib</outputDirectory>
-              <useRepositoryLayout>true</useRepositoryLayout>
+              <useRepositoryLayout>false</useRepositoryLayout>
             </configuration>
           </execution>
         </executions>
@@ -252,6 +252,12 @@
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>30.1.1-jre</version>
+      </dependency>
+
+      <dependency>
+          <groupId>net.sf.py4j</groupId>
+          <artifactId>py4j</artifactId>
+          <version>0.10.9.1</version>
       </dependency>
 
     </dependencies>
