--- a/Agents/WeatherAgent/docker-compose.yml.template
+++ b/Agents/WeatherAgent/docker-compose.yml.template
@@ -4,10 +4,19 @@ services:
   weatheragent:
     container_name: weatheragent
     image: weatheragent:1.0.0
+    environment:
+      JPDA_ADDRESS: 0.0.0.0:8000
+      JPDA_TRANSPORT: "dt_socket"
+      KG_URL: "http://blazegraph:8080/blazegraph/namespace/weather/sparql"
+      POSTGRES_URL: "jdbc:postgresql://postgres:5432/postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: ""
+      API_KEY: ""
     build:
       context: ./
     ports:
       - "8081:8080"
+      - "8001:8000"
     volumes:
       - logs:/root/.jps
 
