--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -84,3 +84,22 @@ upstream prod_db_portainer {
 upstream prod_web_portainer {
     server 192.168.1.197:9000;
 }
+
+
+# ============================= Temporary demos for CReDo v2 =============================
+
+upstream local_credo-v2-all {
+    server credo-v2-all:80;
+}
+
+upstream local_credo-v2-aw {
+    server credo-v2-aw:80;
+}
+
+upstream local_credo-v2-bt {
+    server credo-v2-bt:80;
+}
+
+upstream local_credo-v2-ukpn {
+    server credo-v2-ukpn:80;
+}
