dev-web-credo-2: Added pre-emptive redirect for CReDo v2 demo stack (running on prod-agent-vm).

--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
@@ -42,7 +42,7 @@ location /cdn/ {
 location = /credo/demo/all {
     return 301 $scheme://$http_host$uri/;
 }
-location /credo/demo/all {
+location /credo/demo/all/ {
     proxy_pass                  http://local_credo-v2-all/;
     proxy_set_header            Host $http_host;
     proxy_set_header            X-Real-IP $remote_addr;
@@ -54,7 +54,7 @@ location /credo/demo/all {
 location = /credo/demo/aw {
     return 301 $scheme://$http_host$uri/;
 }
-location /credo/demo/aw {
+location /credo/demo/aw/ {
     proxy_pass                  http://local_credo-v2-aw/;
     proxy_set_header            Host $http_host;
     proxy_set_header            X-Real-IP $remote_addr;
@@ -66,7 +66,7 @@ location /credo/demo/aw {
 location = /credo/demo/bt {
     return 301 $scheme://$http_host$uri/;
 }
-location /credo/demo/bt {
+location /credo/demo/bt/ {
     proxy_pass                  http://local_credo-v2-bt/;
     proxy_set_header            Host $http_host;
     proxy_set_header            X-Real-IP $remote_addr;
@@ -78,8 +78,20 @@ location /credo/demo/bt {
 location = /credo/demo/ukpn {
     return 301 $scheme://$http_host$uri/;
 }
-location /credo/demo/ukpn {
+location /credo/demo/ukpn/ {
     proxy_pass                  http://local_credo-v2-ukpn/;
+    proxy_set_header            Host $http_host;
+    proxy_set_header            X-Real-IP $remote_addr;
+    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header            X-Forwarded-Host $http_host;
+    proxy_set_header            X-Forwarded-Server $http_host;
+}
+
+location = /credo/demo/stack {
+    return 301 $scheme://$http_host$uri/;
+}
+location /credo/demo/stack/ {
+    proxy_pass                  http://agent_credo-v2-stack/;
     proxy_set_header            Host $http_host;
     proxy_set_header            X-Real-IP $remote_addr;
     proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
