--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -103,3 +103,7 @@ upstream local_credo-v2-bt {
 upstream local_credo-v2-ukpn {
     server credo-v2-ukpn:80;
 }
+
+upstream agent_credo-v2-stack {
+    server 192.168.1.177:3838;
+}
