dev-web-credo-2: Updated demo stack redirects.

--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.prod.conf
@@ -104,6 +104,14 @@ upstream local_credo-v2-ukpn {
     server credo-v2-ukpn:80;
 }
 
-upstream agent_credo-v2-stack {
+upstream agent_credo-v2-stack-aw {
+    server 192.168.1.177:3837;
+}
+
+upstream agent_credo-v2-stack-bt {
     server 192.168.1.177:3838;
+}
+
+upstream agent_credo-v2-stack-ukpn {
+    server 192.168.1.177:3839;
 }
