--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
@@ -50,7 +50,6 @@ location /credo/demo/all/ {
     proxy_set_header            X-Forwarded-Host $http_host;
     proxy_set_header            X-Forwarded-Server $http_host;
 }
-
 location = /credo/demo/aw {
     return 301 $scheme://$http_host$uri/;
 }
@@ -62,7 +61,6 @@ location /credo/demo/aw/ {
     proxy_set_header            X-Forwarded-Host $http_host;
     proxy_set_header            X-Forwarded-Server $http_host;
 }
-
 location = /credo/demo/bt {
     return 301 $scheme://$http_host$uri/;
 }
@@ -74,7 +72,6 @@ location /credo/demo/bt/ {
     proxy_set_header            X-Forwarded-Host $http_host;
     proxy_set_header            X-Forwarded-Server $http_host;
 }
-
 location = /credo/demo/ukpn {
     return 301 $scheme://$http_host$uri/;
 }
@@ -87,11 +84,33 @@ location /credo/demo/ukpn/ {
     proxy_set_header            X-Forwarded-Server $http_host;
 }
 
-location = /credo/demo/stack {
+location = /credo/demo/stack/aw {
     return 301 $scheme://$http_host$uri/;
 }
-location /credo/demo/stack/ {
-    proxy_pass                  http://agent_credo-v2-stack/;
+location /credo/demo/stack/aw/ {
+    proxy_pass                  http://agent_credo-v2-stack-aw/;
+    proxy_set_header            Host $http_host;
+    proxy_set_header            X-Real-IP $remote_addr;
+    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header            X-Forwarded-Host $http_host;
+    proxy_set_header            X-Forwarded-Server $http_host;
+}
+location = /credo/demo/stack/bt {
+    return 301 $scheme://$http_host$uri/;
+}
+location /credo/demo/stack/bt/ {
+    proxy_pass                  http://agent_credo-v2-stack-bt/;
+    proxy_set_header            Host $http_host;
+    proxy_set_header            X-Real-IP $remote_addr;
+    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header            X-Forwarded-Host $http_host;
+    proxy_set_header            X-Forwarded-Server $http_host;
+}
+location = /credo/demo/stack/ukpn {
+    return 301 $scheme://$http_host$uri/;
+}
+location /credo/demo/stack/ukpn/ {
+    proxy_pass                  http://agent_credo-v2-stack-ukpn/;
     proxy_set_header            Host $http_host;
     proxy_set_header            X-Real-IP $remote_addr;
     proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
